apps/goalert/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goalert
spec:
  selector:
    app: goalert
  ports:
    - name: http
      port: 8081
      targetPort: http
